# singsi

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  diffhead.txt  gitlog.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 6863dabf5089_add_document_table.py
app/: __init__.py  main.py
app/api/: ai_api.py  ai_services.py  document.py  document_api.py
app/api/endpoints/: document_analysis.py
app/core/: config.py
app/db/: base_class.py  session.py
app/examples/: conversation_example.py
app/models/: document.py
app/services/: ai_service.py  document_service.py
app/services/ai/: base.py  factory.py
app/services/ai/base/: __init__.py  ai_service_abstract.py
app/services/ai/factory/: __init__.py  (+1 more)
app/services/document/: document_manager.py  education_content_analyzer.py  parser_base.py  parsing_service.py
app/services/storage/: base.py  local.py
app/static/css/: styles.css
app/templates/: index.html
app/utils/: prompts.py
docs/: PRD_EN.md  PRD_zh_TW.md  design_proposals_en.md  design_proposals_zh_TW.md  project_structure.md  project_structure_en.md  project_structure_zh_TW.md
docs/development_notes/: EDA_guide.md  EDA_roadmap.md  next_tasks.md
docs/uml/: ai_activity_diagram.puml  ai_class_diagram.puml  ai_component_diagram.puml  ai_sequence_diagram.puml  document_activity_diagram.puml  document_class_diagram.puml  document_component_diagram.puml  document_sequence_diagram.puml
scripts/: check.sh  create_test_image.py
tests/: conftest.py  test_ai_provider.py
tests/api/: test_ai_api.py  test_document_api.py
tests/functional/api/: test_document_api.py
tests/integration/services/: test_ai_provider.py
tests/services/ai/: test_ai_service_abstract.py  test_ai_service_factory.py  test_document_analysis_request.py  test_openai_service.py  test_openai_service_with_prompts.py
tests/services/document/: test_document_service.py
tests/unit/services/: test_document_service.py
tests/utils/: test_prompts.py
(+11 files in other folders)
